--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.15.0",
     "mongoose": "^5.9.7",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.2",
     "typescript": "^4.9.5"
   }
